--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>April Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/29daaa91a3.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div id="header">
@@ -37,7 +38,7 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>omg sjaoidjowajdoawjdawd</p>
+                    <p>An enthusiastic student passionate about web development, visual arts, violin and tennis.</p>
 
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
@@ -56,9 +57,13 @@
                             <li><span>2022-Present</span><br>String Orchestra Vice President @ WLMAC</li>
                             <li><span>2022-Present</span><br>Beginner Python Lead @ Coding is Fun</li>
                             <li><span>2022-Present</span><br>Web Developer @ Dr. Kang Lee's Development Lab</li>
-                            <li><span>2023-Present</span><br>Arts Writer @ The Lyon (school newspaper)</li>
+                            <li><span>2023-Present</span><br>Arts Writer @ The Lyon (School Newspaper)</li>
                             <li><span>2024-Present</span><br>Co-director of Communications @ Technolgap</li>
-                            <li><span>2024</span><br>Back-end intern @ The Pink Stairs</li>
+                            <li><span>2024-Present</span><br>Centre Assistant @ Kumon</li>
+                            <li><span>2024-2024</span><br>Back-end Intern @ The Pink Stairs</li>
+                            <li><span>2023-2024</span><br>Back-end Developer @ Project Metropolis</li>
+                            <li><span>2022-2024</span><br>Beginner Python Teacher @ Code 4 Tomorrow</li>
+                            <li><span>2022-2023</span><br>Release/General Support Volunteer @ Toronto Wildlife Centre</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
@@ -76,20 +81,86 @@
         <h1 class="sub-title">Services</h1>
         <div class="services-list">
             <div>
+                <i class="fa-solid fa-code"></i>
                 <h2>Web Development</h2>
-                <p>jdwaiodjawiodj woiajdawjdowajd jawoidjwaoidjawo djwaoijdoiw ajdioawjd oiajdioaw</p>
-                <a href="'#">learn more </a>
+                <p>I have both front-end and back-end web development experience. I have made contributions to a number of large-scale projects, such as the website for The Pink Stairs, Project Metropolis, Dr. Kang Lee's Development Lab, among other projects. I also have a vast number of hackathon projects.</p>
+                <a href="https://github.com/ohi-711/">github</a>
+                <a href="https://devpost.com/ohi711">devpost</a>
+                <a href="https://dorahacks.io/hacker/ohi711">dorahacks</a>
             </div>
             <div>
+                <i class="fa-solid fa-pencil"></i>
                 <h2>Graphic Design</h2>
-                <p>jdwaio djawiodjw oiajdawjd owajdjawoid jwaoidja wodjwao ijdoiwa jdio awjdo iajd ioaw</p>
-                <a href="'#">learn more </a> 
+                <p>I am a designer proficent in using Canva, Figma, and digital art programs. I create graphics for my school's String Orchestra, and math club. I have also created the campaign posts for a student trustee candidate.</p>
+                <a href="https://drive.google.com/drive/folders/1UFjZOWEXFcPfwuolsvE2jM0y6ECxDehR?usp=drive_link">past work</a> 
             </div>
             <div>
+                <i class="fa-solid fa-bullhorn"></i>
                 <h2>Marketing</h2>
-                <p>jdwaiodjawi odjwoiajdawjdowajd jawoidjwa oidjawodjw aoijd oiwaj dioawjdo iajd ioaw</p>
-                <a href="'#">learn more </a>
+                <p>I have marketing experience from being the Co-director of Communications for Technolgap and promoting their events through social media posts. I also run fundraising events for my school's String Orchestra and promote them through Instagram, posters, and announcements that I create and post. I also have public speaking skills from a history of doing Model UN and British Parlimentary style Debate.</p>
             </div>
+        </div>
+    </div>
+</div>
+
+<div id="portfolio">
+    <div class="container">
+        <h1 class="sub-title">Portfolio</h1>
+        <div class="work-list">
+            <div class="work">
+                <img src="images/pinkstairs.png">
+                <div class="layer">
+                    <h3>The Pink Stairs</h3>
+                    <p>Contributed to a website for a non-profit organization dedicated to:</p>
+                    <a href="https://thepinkstairs.org/" target="_blank"><i class="fa-solid fa-link"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="images/mealmatch.png">
+                <div class="layer">
+                    <h3>MealMatch</h3>
+                    <p>Contributed to a website for a non-profit organization dedicated to:</p>
+                    <a href="https://thepinkstairs.org/"><i class="fa-solid fa-link"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="images/metropolis.png">
+                <div class="layer">
+                    <h3>TalkTutor</h3>
+                    <p>Contributed to a website for a non-profit organization dedicated to:</p>
+                    <a href="https://thepinkstairs.org/"><i class="fa-solid fa-link"></i></a>
+                </div>
+            </div>
+        </div>
+        <a href="" class="btn">See more</a>
+    </div>
+</div>
+
+<div id="contact">
+    <div class="container">
+        <div class="row">
+            <div class="contact-left">
+                <h1 class="sub-title">Contact Me</h1>
+                <p><i class="fa-solid fa-paper-plane"></i> aprilsun711@gmail.com</p>
+                <p><i class="fa-solid fa-phone"></i> 647-975-3896</p>
+                <div class="social-icons">
+                    <a href="https://www.linkedin.com/in/april-sun-67392227a/"><i class="fa-brands fa-linkedin"></i></a>
+                </div>
+                <a href="images/resume.pdf" download class="btn btn2">Download CV</a>
+            </div>
+            <div class="contact-right">
+                <form>
+                    <input type="text" name="Name" placeholder="Your Name" required>
+                    <input type="email" name="Email" placeholder="Your Email" required>
+                    <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+                    <button type="submit" class="btn btn2">Submit</button>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div class="copyright">
+        <div class="container">
+            <p>&copy; 2024 April Sun.</p>
         </div>
     </div>
 </div>
