--- a/index.html
+++ b/index.html
@@ -110,27 +110,27 @@
         <h1 class="sub-title">Portfolio</h1>
         <div class="work-list">
             <div class="work">
-                <img src="images/pinkstairs.png">
+                <img src="images/rest.png">
                 <div class="layer">
-                    <h3>The Pink Stairs</h3>
-                    <p>Contributed to a website for a non-profit organization dedicated to:</p>
-                    <a href="https://thepinkstairs.org/" target="_blank"><i class="fa-solid fa-link"></i></a>
+                    <h3>Rest</h3>
+                    <p>Created a website that utilizes music for therapeutic purposes.</p>
+                    <a href="https://github.com/ohi-711/Rest" target="_blank"><i class="fa-solid fa-link"></i></a>
                 </div>
             </div>
             <div class="work">
                 <img src="images/mealmatch.png">
                 <div class="layer">
                     <h3>MealMatch</h3>
-                    <p>Contributed to a website for a non-profit organization dedicated to:</p>
-                    <a href="https://thepinkstairs.org/"><i class="fa-solid fa-link"></i></a>
+                    <p>Build an tpp that connects restaurants with excess food with food banks and those in need.</p>
+                    <a href="https://github.com/Duck-luv-pie/MealMatch"><i class="fa-solid fa-link"></i></a>
                 </div>
             </div>
             <div class="work">
-                <img src="images/metropolis.png">
+                <img src="images/signquest.png">
                 <div class="layer">
-                    <h3>TalkTutor</h3>
-                    <p>Contributed to a website for a non-profit organization dedicated to:</p>
-                    <a href="https://thepinkstairs.org/"><i class="fa-solid fa-link"></i></a>
+                    <h3>SignQuest</h3>
+                    <p>Made a website that teaches American sign language in a fun and engaging format for users.</p>
+                    <a href="https://github.com/ohi-711/jamhacks8project"><i class="fa-solid fa-link"></i></a>
                 </div>
             </div>
         </div>
