image wasnt appearing

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="images/user.jpg">
+                    <img src="images/user.JPG">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
@@ -86,15 +86,15 @@
                 <i class="fa-solid fa-code"></i>
                 <h2>Web Development</h2>
                 <p>I have both front-end and back-end web development experience. I have made contributions to a number of large-scale projects, such as the website for The Pink Stairs, Project Metropolis, Dr. Kang Lee's Development Lab, among other projects. I also have a vast number of hackathon projects.</p>
-                <a href="https://github.com/ohi-711/">github</a>
-                <a href="https://devpost.com/ohi711">devpost</a>
-                <a href="https://dorahacks.io/hacker/ohi711">dorahacks</a>
+                <a href="https://github.com/ohi-711/" target="_blank">github</a>
+                <a href="https://devpost.com/ohi711" target="_blank">devpost</a>
+                <a href="https://dorahacks.io/hacker/ohi711" target="_blank">dorahacks</a>
             </div>
             <div>
                 <i class="fa-solid fa-pencil"></i>
                 <h2>Graphic Design</h2>
                 <p>I am a designer proficent in using Canva, Figma, and digital art programs. I create graphics for my school's String Orchestra, and math club. I have also created the campaign posts for a student trustee candidate.</p>
-                <a href="https://drive.google.com/drive/folders/1UFjZOWEXFcPfwuolsvE2jM0y6ECxDehR?usp=drive_link">past work</a> 
+                <a href="https://drive.google.com/drive/folders/1UFjZOWEXFcPfwuolsvE2jM0y6ECxDehR?usp=drive_link" target="_blank">past work</a> 
             </div>
             <div>
                 <i class="fa-solid fa-bullhorn"></i>
@@ -122,7 +122,7 @@
                 <div class="layer">
                     <h3>MealMatch</h3>
                     <p>Build an tpp that connects restaurants with excess food with food banks and those in need.</p>
-                    <a href="https://github.com/Duck-luv-pie/MealMatch"><i class="fa-solid fa-link"></i></a>
+                    <a href="https://github.com/Duck-luv-pie/MealMatch" target="_blank"><i class="fa-solid fa-link"></i></a>
                 </div>
             </div>
             <div class="work">
@@ -130,11 +130,11 @@
                 <div class="layer">
                     <h3>SignQuest</h3>
                     <p>Made a website that teaches American sign language in a fun and engaging format for users.</p>
-                    <a href="https://github.com/ohi-711/jamhacks8project"><i class="fa-solid fa-link"></i></a>
+                    <a href="https://github.com/ohi-711/jamhacks8project" target="_blank"><i class="fa-solid fa-link"></i></a>
                 </div>
             </div>
         </div>
-        <a href="" class="btn">See more</a>
+        <a href="https://github.com/ohi-711/" target="_blank" class="btn">See more</a>
     </div>
 </div>
 
@@ -146,10 +146,10 @@
                 <p><i class="fa-solid fa-paper-plane"></i> aprilsun711@gmail.com</p>
                 <p><i class="fa-solid fa-phone"></i> 647-975-3896</p>
                 <div class="social-icons">
-                    <a href="https://www.linkedin.com/in/april-sun-67392227a/"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="https://github.com/ohi-711/"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/april-sun-67392227a/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://github.com/ohi-711/" target="_blank"><i class="fa-brands fa-github"></i></a>
                 </div>
-                <a href="images/resume.pdf" download class="btn btn2">Download CV</a>
+                <a href="images/resume.pdf" download target="_blank" class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
