fixed spacing thing for submit

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div id="about">
         <div class="container">
             <div class="row">
-                <div class="about-col-1">
+                <div class="about-col-1"> 
                     <img src="images/user.JPG">
                 </div>
                 <div class="about-col-2">
@@ -113,7 +113,8 @@
                 <img src="images/rest.png">
                 <div class="layer">
                     <h3>Rest</h3>
-                    <p>Created a website that utilizes music for therapeutic purposes.</p>
+                    <p>Kivy/KivyMD Kvlang, Python</p>
+                    <p>A website that utilizes music for therapeutic purposes. It connects to the user’s Spotify account and plays music suitable for the emotion the user is feeling. Emotion detection is done through AI analyzing facial expressions and text.</p>
                     <a href="https://github.com/ohi-711/Rest" target="_blank"><i class="fa-solid fa-link"></i></a>
                 </div>
             </div>
@@ -121,7 +122,7 @@
                 <img src="images/mealmatch.png">
                 <div class="layer">
                     <h3>MealMatch</h3>
-                    <p>Build an tpp that connects restaurants with excess food with food banks and those in need.</p>
+                    <p>An app that connects businesses and restaurants with excess food to food banks. An award-winning project that tackles food insecurity</p>
                     <a href="https://github.com/Duck-luv-pie/MealMatch" target="_blank"><i class="fa-solid fa-link"></i></a>
                 </div>
             </div>
@@ -129,7 +130,7 @@
                 <img src="images/signquest.png">
                 <div class="layer">
                     <h3>SignQuest</h3>
-                    <p>Made a website that teaches American sign language in a fun and engaging format for users.</p>
+                    <p>A website that teaches users American sign language through a game. It tracks the location of the users’ fingers and checks if the ASL  matches the word on the screen.</p>
                     <a href="https://github.com/ohi-711/jamhacks8project" target="_blank"><i class="fa-solid fa-link"></i></a>
                 </div>
             </div>
@@ -214,7 +215,7 @@
         })
         .catch(error => console.error('Error!', error.message))
     })
-  </script>
+</script>
 
 </body>
 </html>
