more detailed project descriptions

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <img src="images/rest.png">
                 <div class="layer">
                     <h3>Rest</h3>
-                    <p>Kivy/KivyMD Kvlang, Python</p>
+                    <p>Python, Flask, HTML, CSS, JS</p><br>
                     <p>A website that utilizes music for therapeutic purposes. It connects to the user’s Spotify account and plays music suitable for the emotion the user is feeling. Emotion detection is done through AI analyzing facial expressions and text.</p>
                     <a href="https://github.com/ohi-711/Rest" target="_blank"><i class="fa-solid fa-link"></i></a>
                 </div>
@@ -128,6 +128,7 @@
                 <img src="images/mealmatch.png">
                 <div class="layer">
                     <h3>MealMatch</h3>
+                    <p>Kivy/KivyMD, Kvlang, Python</p><br>
                     <p>An app that connects businesses and restaurants with excess food to food banks. An award-winning project that tackles food insecurity</p>
                     <a href="https://github.com/Duck-luv-pie/MealMatch" target="_blank"><i class="fa-solid fa-link"></i></a>
                 </div>
@@ -136,6 +137,7 @@
                 <img src="images/signquest.png">
                 <div class="layer">
                     <h3>SignQuest</h3>
+                    <p>Flask, HTML, CSS, JS, Python</p><br>
                     <p>A website that teaches users American sign language through a game. It tracks the location of the users’ fingers and checks if the ASL  matches the word on the screen.</p>
                     <a href="https://github.com/ohi-711/jamhacks8project" target="_blank"><i class="fa-solid fa-link"></i></a>
                 </div>
